# sphinx-vhdl

./: .buildinfo  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  autodoc.html  config.html  directives_detailed.html  example_built.html  genindex.html  group_example_built.html  index.html  objects.inv  roles_detailed.html  search.html  searchindex.js  setup.cfg
.github/workflows/: doc.yml
_sources/: autodoc.rst.txt  config.rst.txt  example_built.rst.txt  index.rst.txt  roles_detailed.rst.txt
doc/: Makefile  requirements.txt
doc/source/: autodoc.rst  conf.py  config.rst  directives_detailed.rst  example.vhd  example_built.rst  group_example.vhd  group_example_built.rst  index.rst  roles_detailed.rst
doctrees/: autodoc.doctree  config.doctree  directives_detailed.doctree  environment.pickle  example_built.doctree  index.doctree  roles_detailed.doctree
html/: .buildinfo  autodoc.html  directives_detailed.html  example_built.html  genindex.html  roles_detailed.html  search.html
html/_sources/: autodoc.rst.txt  index.rst.txt
src/sphinxvhdl/: autodoc.py  directives.py  vhdl.py
