[metadata]
name = sphinx-vhdl
version = 0.0.1
author = Jindřich Dítě
author_email = xditej01@stud.fit.vutbr.cz
description = A Sphinx domain and autodocumenter for VHDL
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyVHDLParser

[options.packages.find]
where = src