[metadata]
name = sphinx-vhdl
version = 0.1.6
author = CESNET z.s.p.o.
author_email = cabal@cesnet.cz
description = A Sphinx domain and autodocumenter for VHDL
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    sphinx >= 6.0

[options.packages.find]
where = src